--- a/web/app/themes/sage/assets/styles/main.scss
+++ b/web/app/themes/sage/assets/styles/main.scss
@@ -12,6 +12,8 @@
 @import "comments";
 @import "gallery";
 
+@import "base/img";
+
 @import "objects/gallery";
 
 @import "components/comment-form-comment";
