--- a/web/app/themes/sage/assets/styles/_nav.scss
+++ b/web/app/themes/sage/assets/styles/_nav.scss
@@ -20,7 +20,8 @@
 		opacity: 0;
 		visibility: hidden;
 		position: fixed;
-		top: 20px;
+		transform: translateY(-20px);
+		top: 0;
 		bottom: 0;
 		left: 0;
 		right: 0;
@@ -32,7 +33,7 @@
 		&.open{
 			opacity: 1;
 			visibility: visible;
-			top: 0;
+			transform: translateY(0);
 		}
 	}
 }
