--- a/_source/_layouts/news.html
+++ b/_source/_layouts/news.html
@@ -1,10 +1,31 @@
-<article class="box box--half">
-  <header class="header header--box">
-    <h1 class="header__text header__text--box">
-      {{ page.title }}
-    </h1>
-  </header>
-  <section class="box__content">
-    {{ content }}
-  </section>
-</article>
+<!doctype html>
+<html class="no-js" lang="en-us">
+  {% include head.html %}
+  <body class="{{ page.title | downcase }}">
+    <!--[if IE]>
+      <div class="alert alert-warning">
+        You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+      </div>
+    <![endif]-->
+    {% include banner.html %}
+    <div class="wrap container" role="document">
+      <div class="content row">
+        <main class="main">
+            {% for new in site.news %}
+            <article class="box box--{% if new.title == 'Recently' %}full{% else %}half{% endif %}">
+              <header class="header header--box">
+                <h1 class="header__text header__text--box">
+                  {{ new.title }}
+                </h1>
+              </header>
+              <section class="box__content">
+                {{ new.content }}
+              </section>
+            </article>
+            {% endfor %}
+        </main><!-- /.main -->
+      </div><!-- /.content -->
+    </div><!-- /.wrap -->
+    {% include footer.html %}
+  </body>
+</html>
