--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -2,9 +2,12 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <title>{{ page.title }}</title>
+  <title>Thomas Azar - {{ page.title }}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="/css/main.css">
+  <script src="//code.jquery.com/jquery-3.2.1.slim.min.js" defer></script>
+  <script src="/scripts/baguetteBox.js" defer></script>
+  <script src="/scripts/main.js" defer></script>
 </head>
