--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -7,7 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="/css/main.css">
+
   <script src="//code.jquery.com/jquery-3.2.1.slim.min.js" defer></script>
-  <script src="/scripts/baguetteBox.js" defer></script>
-  <script src="/scripts/main.js" defer></script>
+  <!-- //-beg- concat_js -->
+  <script src="/scripts/baguetteBox.js"></script>
+  <script src="/scripts/main.js"></script>
+  <!-- //-end- concat_js -->
+
+  <!-- Piwik -->
+<script type="text/javascript">
+  var _paq = _paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//piwik.thomasazar.net/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Piwik Code -->
+
 </head>
