--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer footer--main">
-	<a href="http://design.thomasazar.net" alt="Design by Thomas Azar">
-		<img src="/images/design-by-thomas-azar.png" alt="Design by Thomas Azar">
+	<a href="http://design.thomasazar.net">
+		<img src="/assets/images/design-by-thomas-azar.png" alt="Design by Thomas Azar">
 	</a>
 </footer>
 
