Change titles of News items

--- a/app/_layouts/news.html
+++ b/app/_layouts/news.html
@@ -12,7 +12,7 @@
       <div class="content row">
         <main class="main">
             {% for new in site.news %}
-            <article class="box box--{% if new.title == 'Recently' %}full{% else %}half{% endif %}">
+            <article class="box box--{% if new.title == 'Shakespeare in Love' %}full{% else %}half{% endif %}">
               <header class="header header--box">
                 <h1 class="header__text header__text--box">
                   {{ new.title }}
