--- a/app/_layouts/media.html
+++ b/app/_layouts/media.html
@@ -6,7 +6,7 @@ layout: default
 {% for portfolio in portfolios %}
   <a class="portfolio__link" href="/galleries/{{ portfolio.title | slugify }}">
     <figure class="portfolio">
-      <img class="portfolio__image" src="/assets/images/galleries/{{ portfolio.title | slugify }}/{{ portfolio.featured }}">
+      <img class="portfolio__image" src="/assets/images/galleries/{{ portfolio.title | slugify }}/thumb/{{ portfolio.featured }}">
       <figcaption class="portfolio__logo {{ portfolio.logo }}">
         {% include logos/{{ portfolio.title | slugify }}.svg %}
       </figcaption>
