--- a/app/_includes/banner.html
+++ b/app/_includes/banner.html
@@ -5,7 +5,7 @@
     </a>
   </h1>
   <p class="blurb">
-    <strong>Coming Soon:</strong><br><em>The Glass Menagerie</em> at the Warehouse Theatre, Jan 25 &ndash; Feb 10
+    <strong>Now Playing:</strong><br><em>The Glass Menagerie</em> at the <a href="https://warehousetheatre.com/glassmenagerie/">Warehouse Theatre</a>, Jan 25 &ndash; Feb 10
   </p>
   <nav class="nav">
     {% include nav.html %}
