Lighten all links in banner

--- a/app/_assets/styles/objects/banner.scss
+++ b/app/_assets/styles/objects/banner.scss
@@ -8,6 +8,10 @@
   align-items: center;
   padding: 0 3em;
 
+  a {
+    color: lighten($base-100, 5%);
+  }
+
   .logo {
     max-height: 50px;
   }
