--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -44,4 +44,7 @@
     })();
   </script>
   <!-- End Matomo Code -->
+
+  <!-- Netlify identity -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
