Change banner to position:sticky, add it to the home page

--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -14,6 +14,7 @@ layout: base
 <p class="hero__caption caption">
   Photo by Will Crooks
 </p>
+{% include banner.html %}
 <main id="news">
   {% assign news = site.news | sort: 'order' %}
   {% for post in news %}
