--- a/app/_assets/styles/base/main.scss
+++ b/app/_assets/styles/base/main.scss
@@ -1,14 +1,10 @@
 main {
   padding: 0 4px;
   max-width: 800px;
-  margin: 0 auto 2em;
+  margin: 2em auto;
 
   p + p {
     margin-top: 1.5em;
-  }
-
-  @media screen and (min-width: 801px) {
-    margin-top: calc(100px + 3em);
   }
 }
 
