--- a/layouts/media/single.html
+++ b/layouts/media/single.html
@@ -12,8 +12,8 @@
     <ul class="gallery">
       {{ range .Params.media }}
         <li class="gallery__item{{ if .major }} major{{ end }}">
-          <a href="/images/galleries/{{ $logo }}/{{ .file }}" data-caption="{{ .caption }}">
-            <img src="/images/galleries/{{ $logo }}/thumb/{{ .file }}">
+          <a href="/images/uploads/{{ $logo }}/{{ .file }}" data-caption="{{ .caption }}">
+            <img src="/images/uploads/{{ $logo }}/thumb/{{ .file }}">
           </a>
         </li>
       {{ end }}
