Use images from .Resources

--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -1,12 +1,17 @@
 {{ define "main" }}
-  {{ range .Pages }}
-    {{ $logo := .Title | urlize }}
+  {{ $media := where .Site.Pages "Section" "media" }}
+  {{ range where $media ".Title" "!=" "Media" }}
+    {{ $resources := .Resources }}
     <a class="portfolio__link" href="{{ .URL }}">
       <figure class="portfolio">
-        <img class="portfolio__image" src="/images/uploads/{{ $logo }}/thumb/{{ .Params.featured }}">
+        {{ $featured := where $resources "Name" .Params.featured }}
+        {{ range $featured }}
+          <img class="portfolio__image" src="{{ (.Fill "1200x800 Top").Permalink }}">
+        {{ end }}
         <figcaption class="portfolio__logo {{ .Params.logo }}">
-          {{ $svg := printf "%s%s%s" "logos/" $logo ".svg" }}
-          {{ partial $svg . }}
+          {{ range ($resources.Match "logo.svg") }}
+            {{ .Content | safeHTML }}
+          {{ end }}
         </figcaption>
       </figure>
     </a>
