Pass along current context

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -22,7 +22,7 @@
   <p class="hero__caption caption">
     Photo by Will Crooks
   </p>
-  {{ partial "banner.html" }}
+  {{ partial "banner.html" . }}
 {{ end }}
 {{ define "main" }}
   <section id="news">
