Barefoot in banner

--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -5,7 +5,7 @@
     </a>
   </h1>
   <p class="blurb">
-    <strong>Now Playing:</strong><br><em>The Glass Menagerie</em> at the <a href="https://warehousetheatre.com/glassmenagerie/">Warehouse Theatre</a>, Jan 25 &ndash; Feb 10
+    <strong>Coming Soon:</strong><br><em>Barefoot in the Park</em> at the <a href="http://www.leanensemble.org/">Lean Ensemble Theatre</a>, Apr 25 &ndash; May 5
   </p>
   <nav class="nav">
     {{ partial "nav.html" . }}
