--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -4,9 +4,11 @@
       {{ partial "logo.svg" }}
     </a>
   </h1>
-  <p class="blurb">
-    <strong>Now Playing:</strong><br><em>Barefoot in the Park</em> at the <a href="http://www.leanensemble.org/">Lean Ensemble Theater</a>, Apr 25 &ndash; May 5
-  </p>
+  <section class="blurb">
+    {{ with .Site.GetPage "/blurb" }}
+      {{ .Content }}
+    {{ end }}
+  </section>
   <nav class="nav">
     {{ partial "nav.html" . }}
   </nav>
