Only gap on the columns

--- a/assets/styles/objects/box.scss
+++ b/assets/styles/objects/box.scss
@@ -50,7 +50,7 @@
   border-right-width: 1px;
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-gap: 20px;
+  grid-column-gap: 20px;
 
   p:nth-child(odd) {
     font-weight: bold;
