--- a/layouts/shortcodes/footer.html
+++ b/layouts/shortcodes/footer.html
@@ -6,7 +6,7 @@
       <p>When</p>
       <p>{{ .when | safeHTML }}</p>
       <p>Tickets</p>
-      <p>Online at <a href="{{ .tickets.online.link }}">{{ .tickets.online.text}}</a><br>By phone at <a href="tel:{{ .tickets.phone | anchorize }}">{{ .tickets.phone }}</a></p>
+      <p>Online at <a href="{{ .tickets.link }}">{{ .tickets.text}}</a><br>By phone at <a href="tel:{{ .tickets.phone | anchorize }}">{{ .tickets.phone }}</a></p>
     </section>
     <section class="box__footer__credits">
       <p>Directed by {{ .director }}</p>
