--- a/layouts/media/single.html
+++ b/layouts/media/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
   <header class="gallery-info">
-    {{ (resources.Get .Params.svg).Content | safeHTML }}
+      {{ $resources := ($.Site.GetPage "section" "uploads").Resources }}
+      {{ ($resources.GetMatch .Params.svg).Content | safeHTML }}
     <h3>{{ .Params.venue }} &mdash; {{ .Params.city }}</h3>
     <section class="gallery-info__credits">
       <span>Directed by {{ .Params.director }}</span>
@@ -9,7 +10,7 @@
     <p class="small">Photos by {{ .Params.photos_by }}</p>
     <ul class="gallery">
       {{ range .Params.images }}
-        {{ $image := resources.Get .file }}
+        {{ $image := $resources.GetMatch .file }}
         <li class="gallery__item{{ if isset . "major"}} major {{ end }}">
           <a href="{{ ($image.Resize "1200x").Permalink }}" data-caption="{{ .caption }}">
             {{ if isset . "major" }}
