Change background color to match hero image

--- a/assets/styles/objects/hero.scss
+++ b/assets/styles/objects/hero.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   align-items: center;
   font-size: 125%;
-  background: #101519;
+  background: #171b1f;
   overflow: hidden;
 
   .logo {
