Move logo to static and reference it directly

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "header" }}
   <header class="hero">
-    {{ partial "logo.svg" }}
+    {{ readFile "/static/images/logo.svg" | safeHTML }}
     <img class="hero__image" src="/images/home.jpg">
     <section class="hero__news">
       {{ .Content }}
