--- a/assets/styles/objects/hero.scss
+++ b/assets/styles/objects/hero.scss
@@ -1,6 +1,7 @@
 .hero {
   display: grid;
-  grid-template: 200px 1fr 200px / 1fr 1fr 1fr;
+  grid-template-rows: [start logo] 200px [nav news] 1fr [bottom] 200px [end];
+  grid-template-columns: [start nav] 1fr [logo center] 1fr [news] 1fr [end];
   height: 100vh;
   align-items: center;
   font-size: 125%;
@@ -8,8 +9,8 @@
   overflow: hidden;
 
   .logo {
-    grid-row: 1;
-    grid-column: 2;
+    grid-row: logo;
+    grid-column: logo;
     z-index: 2;
     justify-self: center;
     width: 264.903px;
@@ -18,8 +19,8 @@
 }
 
 .hero__image {
-  grid-row: 1 / 4;
-  grid-column: 1 / 4;
+  grid-row: start / end;
+  grid-column: start / end;
   width: 100%;
   height: auto;
   object-fit: contain;
@@ -31,15 +32,15 @@
 }
 
 .hero__news {
-  grid-row: 2;
-  grid-column: 3;
+  grid-row: news;
+  grid-column: news;
   padding: 0 10px;
   animation: slideFromRight 0.75s ease-in 2s forwards;
 }
 
 .hero__nav {
-  grid-row: 2;
-  grid-column: 1;
+  grid-row: nav;
+  grid-column: nav;
   margin: 0 !important;
   padding-left: 40px;
   animation: slideFromLeft 0.75s ease-in 1s forwards;
@@ -65,10 +66,10 @@
 
 @media screen and (max-width: 800px) {
   .hero {
-    grid-template: auto 1fr auto/ 1fr;
+    grid-template-rows: [start logo] auto [news] 1fr [nav] auto [end];
+    grid-template-columns: [start logo nav news] 1fr [end];
 
     .logo {
-      grid-column: 1;
       max-height: 100px;
       align-self: start;
       margin-top: 10px;
@@ -81,8 +82,6 @@
   }
 
   .hero__news {
-    grid-row: 2;
-    grid-column: 1;
     margin: 0 auto;
     align-self: end;
     background: transparentize($base-500, 0.5);
@@ -90,8 +89,6 @@
   }
 
   .hero__nav {
-    grid-row: 3;
-    grid-column: 1;
     align-self: end;
     padding-left: 0;
     background: transparentize($base-900, 0.5);
