Update Matomo URL

--- a/layouts/partials/matomo.html
+++ b/layouts/partials/matomo.html
@@ -5,7 +5,7 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//analytics.thomasazar.net/";
+    var u="//analytics.thomasazar.net/matomo//";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '{{ $.Site.Params.matomoid }}']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
