Pulls news items to put on front page

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -24,11 +24,19 @@
   </p>
   {{ partial "banner.html" . }}
 {{ end }}
+
 {{ define "main" }}
+  {{ $news := .Site.GetPage "/news" }}
   <section id="news">
-    {{ range .Params.blocks }}
-        {{ if eq .template "news" }}{{ partial "blocks/news" (dict "Params" .) }}{{ end }}
-        {{ if eq .template "footer" }}{{ partial "blocks/footer" (dict "Params" .) }}{{ end }}
+    {{ range $news.Pages }}
+        <article class="box">
+            <header class="box__header">
+                <h2>{{ .Title }}</h2>
+            </header>
+            <section class="box__main">
+                {{ .Content }}
+            </section>
+        </article>
     {{ end }}
   </section>
 {{ end }}
