Remove news from front page

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,42 +1,22 @@
-{{ define "header" }}
-  <header class="hero">
-    {{ readFile "/static/images/logo.svg" | safeHTML }}
-    <img class="hero__image" src="/images/home.jpg">
-    <section class="hero__news">
-      {{ .Content }}
-    </section>
-    <nav class="nav hero__nav">
-      <ul class="nav__list">
-        {{ range .Site.Menus.main }}
-          <li class="nav__item">
-            {{ if eq .Name "News" }}
-              <a class="nav__link" href="#news">{{ .Name }}</a>
-            {{ else }}
-              <a class="nav__link" href="{{ .URL }}">{{ .Name }}</a>
+<!doctype html>
+<html lang="en-US">
+  {{ partial "head.html" . }}
+  <body class="{{ .Page.Title | urlize | lower }}">
+    <header class="hero">
+        {{ readFile "/static/images/logo.svg" | safeHTML }}
+        <img class="hero__image" src="/images/home.jpg">
+        <section class="hero__news">
+          {{ .Content }}
+        </section>
+        <nav class="nav hero__nav">
+          <ul class="nav__list">
+            {{ range .Site.Menus.main }}
+              <li class="nav__item">
+                <a class="nav__link" href="{{ .URL }}">{{ .Name }}</a>
+              </li>
             {{ end }}
-          </li>
-        {{ end }}
-      </ul>
-    </nav>
-  </header>
-  <p class="hero__caption caption">
-    Photo by Will Crooks
-  </p>
-  {{ partial "banner.html" . }}
-{{ end }}
-
-{{ define "main" }}
-  {{ $news := .Site.GetPage "/news" }}
-  <section id="news">
-    {{ range $news.Pages }}
-        <article class="box">
-            <header class="box__header">
-                <h2>{{ .Title }}</h2>
-            </header>
-            <section class="box__main">
-                {{ .Content }}
-            </section>
-        </article>
-    {{ end }}
-  </section>
-{{ end }}
+          </ul>
+        </nav>
+      </header>
+  </body>
+</html>
