--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "base/ul";
 
 @import "objects/banner";
+@import "objects/big-quote";
 @import "objects/box";
 @import "objects/caption";
 @import "objects/date";
