--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import "generic/normalize";
 
 @import "base/a";
+@import "base/figure";
 @import "base/headings";
 @import "base/html";
 @import "base/img";
