Simple comments form using Formspree.io

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "objects/box";
 @import "objects/caption";
 @import "objects/date";
+@import "objects/form";
 @import "objects/gallery-info";
 @import "objects/gallery";
 @import "objects/hero";
