--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,3 +1,5 @@
+<hr>
+<p class="small"><em>Have some thoughts? Let me hear them!</em></p>
 <form class="form" id="comments-form" action="https://formspree.io/mgeyppor" method="POST">
     <label class="form__label" for="name">Name</label>
     <input class="form__text" type="text" name="name" required="">
@@ -14,49 +16,49 @@
 <!-- Place this script at the end of the body tag -->
 
 <script>
-  window.addEventListener("DOMContentLoaded", function() {
+    window.addEventListener("DOMContentLoaded", function() {
 
-    // get the form elements defined in your form HTML above
+        // get the form elements defined in your form HTML above
 
-    var form = document.getElementById("comments-form");
-    var button = document.getElementById("submit-button");
-    var status = document.getElementById("form-status");
+        var form = document.getElementById("comments-form");
+        var button = document.getElementById("submit-button");
+        var status = document.getElementById("form-status");
 
-    // Success and Error functions for after the form is submitted
+        // Success and Error functions for after the form is submitted
 
-    function success() {
-      form.reset();
-      button.style = "display: none ";
-      status.innerHTML = "Thanks for sharing!";
-    }
+        function success() {
+            form.reset();
+            button.style = "display: none ";
+            status.innerHTML = "Thanks for sharing!";
+        }
 
-    function error() {
-      status.innerHTML = "Oops! There was a problem.";
-    }
+        function error() {
+            status.innerHTML = "Oops! There was a problem.";
+        }
 
-    // handle the form submission event
+        // handle the form submission event
 
-    form.addEventListener("submit", function(ev) {
-      ev.preventDefault();
-      var data = new FormData(form);
-      ajax(form.method, form.action, data, success, error);
+        form.addEventListener("submit", function(ev) {
+            ev.preventDefault();
+            var data = new FormData(form);
+            ajax(form.method, form.action, data, success, error);
+        });
     });
-  });
 
-  // helper function for sending an AJAX request
+    // helper function for sending an AJAX request
 
-  function ajax(method, url, data, success, error) {
-    var xhr = new XMLHttpRequest();
-    xhr.open(method, url);
-    xhr.setRequestHeader("Accept", "application/json");
-    xhr.onreadystatechange = function() {
-      if (xhr.readyState !== XMLHttpRequest.DONE) return;
-      if (xhr.status === 200) {
-        success(xhr.response, xhr.responseType);
-      } else {
-        error(xhr.status, xhr.response, xhr.responseType);
-      }
-    };
-    xhr.send(data);
-  }
+    function ajax(method, url, data, success, error) {
+        var xhr = new XMLHttpRequest();
+        xhr.open(method, url);
+        xhr.setRequestHeader("Accept", "application/json");
+        xhr.onreadystatechange = function() {
+            if (xhr.readyState !== XMLHttpRequest.DONE) return;
+            if (xhr.status === 200) {
+                success(xhr.response, xhr.responseType);
+            } else {
+                error(xhr.status, xhr.response, xhr.responseType);
+            }
+        };
+        xhr.send(data);
+    }
 </script>
