Point to correct URL for Cloudinary

--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -3,8 +3,8 @@
     {{ $featured := .Params.featured }}
     <a class="portfolio__link" href="{{ .Permalink }}">
       <figure class="portfolio">
-        <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/w_1200/{{ $.Site.Params.images_directory }}/{{ $featured }}">
-        {{ $svg := printf "%s/fl_sanitize/%s/%s" $.Site.Params.images_prefix $.Site.Params.images_directory .Params.svg }}
+        <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/w_1200/{{ $featured }}">
+        {{ $svg := printf "%s/fl_sanitize/%s" $.Site.Params.images_prefix .Params.svg }}
         <object class="portfolio__logo {{ .Params.logo }}" type="image/svg+xml" data="{{ $svg }}">
             {{ .Title }}
         </object>
