--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -3,7 +3,7 @@
     {{ $featured := .Params.featured }}
     <a class="portfolio__link" href="{{ .Permalink }}">
       <figure class="portfolio">
-        <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/w_1200/{{ $featured }}">
+        <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/c_fill,w_792,h_528,g_auto/{{ $featured }}">
         {{ $svg := printf "%s/fl_sanitize/%s" $.Site.Params.images_prefix .Params.svg }}
         <object class="portfolio__logo {{ .Params.logo }}" type="image/svg+xml" data="{{ $svg }}">
             {{ .Title }}
