Use <img> instead of <object>

--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -5,9 +5,7 @@
       <figure class="portfolio">
         <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/c_fill,w_792,h_528,g_auto/{{ $featured }}">
         {{ $svg := printf "%s/fl_sanitize/%s" $.Site.Params.images_prefix .Params.svg }}
-        <object class="portfolio__logo {{ .Params.logo }}" type="image/svg+xml" data="{{ $svg }}">
-            {{ .Title }}
-        </object>
+        <img class="portfolio__logo {{ .Params.logo }}" src="{{ $svg }}" alt="{{ .Title }}" width="396">
       </figure>
     </a>
   {{ end }}
