--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,13 +1,13 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>{{ $.Site.Title }} - {{ .Page.Title }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {{ $options := (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" true ) }}
-  {{ $style := resources.Get "styles/main.scss" | resources.ToCSS $options | fingerprint }}
-  <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<title>{{ $.Site.Title }} - {{ .Page.Title }}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	{{ $options := (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" true ) }}
+	{{ $style := resources.Get "styles/main.scss" | resources.ToCSS $options | fingerprint }}
+	<link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
-  <!-- ****** faviconit.com favicons ****** -->
+	<!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="/images/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="/images/favicon-192.png">
@@ -30,11 +30,19 @@
 	<meta name="msapplication-config" content="/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
 
-  {{ $baguetteBox := resources.Get "scripts/vendor/baguetteBox.js" }}
-  {{ $smoothScroll := resources.Get "scripts/vendor/smooth-scroll.js" }}
-  {{ $jsMain := resources.Get "scripts/main.js" }}
-  {{ $js := slice $baguetteBox $smoothScroll $jsMain | resources.Concat "js/scripts.js" | minify | fingerprint }}
-  <script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}" defer async></script>
+	{{ $baguetteBox := resources.Get "scripts/vendor/baguetteBox.js" }}
+	{{ $smoothScroll := resources.Get "scripts/vendor/smooth-scroll.js" }}
+	{{ $jsMain := resources.Get "scripts/main.js" }}
+	{{ $js := slice $baguetteBox $smoothScroll $jsMain | resources.Concat "js/scripts.js" | minify | fingerprint }}
+	<script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}" defer async></script>
 
-  {{ partialCached "matomo" . }}
+	{{ partialCached "matomo" . }}
+
+	<script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
+	<script>
+		(function () {
+			// initialize the test
+			var test = vhCheck();
+		}());
+	</script>
 </head>
