--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -3,7 +3,7 @@
     {{ $featured := .Params.featured }}
     <a class="portfolio__link" href="{{ .Permalink }}">
       <figure class="portfolio">
-        <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/c_fill,w_792,h_528,g_auto/{{ $featured }}">
+        <img class="portfolio__image" src="{{ $.Site.Params.images_prefix }}/c_fill,w_792,h_528,g_auto,f_auto/{{ $featured }}">
         {{ $svg := printf "%s/fl_sanitize/%s" $.Site.Params.images_prefix .Params.svg }}
         <img class="portfolio__logo {{ .Params.logo }}" src="{{ $svg }}" alt="{{ .Title }}" width="396">
       </figure>
