--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,6 +41,8 @@
     <script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}" defer async></script>
 
     <script data-goatcounter="https://gc.thomasazar.net/count" async src="//gc.thomasazar.net/count.js"></script>
+
+    <script async defer data-domain="thomasazar.net" src="//plausible.thomasazar.net/js/plausible.js"></script>
 </head>
 
 <body class="{{ .Page.Title | urlize | lower }}">
